2007-06-27  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c:
	(clutter_actor_scale_with_gravityx):
	Made to work after changes to the behavivour of
	clutter_actor_get_absolute_size() for rotated actors.
	
2007-06-26  Tomas Frydrych  <tf@openedhand.com>

	* clutter/cogl/gl/cogl.c:
	* clutter/cogl/gles/cogl.c:
	(cogl_setup_viewport):
	For default perspective angle of 60 degrees, use a hardcoded
	z_camera constant that provides minimal artefacts when rendering
	text; for other angles we calculate.

2007-06-26  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.h:
	* clutter/clutter-actor.c:
	Added fixed point version of clutter_actor_rotate_*() functions
	and accessors for rotation angles.
	
2007-06-25  Matthew Allum  <mallum@openedhand.com>

	* README:
	Update a little more.
	* clutter/clutter-effect.c:
	Add missing func documentation
	* clutter/clutter-rectangle.c:
	Fix border drawing. 

2007-06-25  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-fixed.h:
	Fixed definition of clutter_cosx() macro.

	* clutter/clutter-stage.c:
	* clutter/cogl/cogl.h:
	* clutter/cogl/gl/cogl.c:
	* clutter/cogl/gles/cogl.c:
	Changed ClutterPerspective.fovy from ClutterAngle to degrees to 
	improve precission in Z-camera calculations.
	
2007-06-22  Matthew Allum  <mallum@openedhand.com>

	* README:
	* README.in:
	* autogen.sh:
	* configure.ac:
	Move back to regular README naming at least for now.

2007-06-22  Matthew Allum  <mallum@openedhand.com>

	* NEWS:
	* README.in:
	* TODO:
	Update for 0.3 release.

	* clutter/clutter-actor.c:
	Minor doc fixups 
	
	* clutter/clutter-texture.c:
	Various minor additions for handling non RGBA data.
	Fix a typo breaking clutter_texture_get_pixbuf() on tiled textures.

	* tests/test-actors.c:
	Disable scaling to avoid drifting (temporary till API is fixed)

2007-06-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-timeline.c: Allow disabling the timeline pool